fix project background image filter overflow

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -215,6 +215,7 @@ section {
  height: calc(100vh - 50px);
   width: 100%;
   position: absolute;
+  overflow: hidden;
 }
 
 .bg-image > * {
